# sfml-template

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: example.h
src/: main.cpp
